--- a/charts/graylog/values.yaml
+++ b/charts/graylog/values.yaml
@@ -190,31 +190,47 @@ graylog:
 
   ## A service for Graylog web interface
   ##
-  service:
-    type: ClusterIP
-    port: 9000
-    ## Add additional ports for the service/statefulset to expose
-    ##
-    ports: []
-
-    headless:
-      ## Add suffix to headless service name
+  services:
+    web:
+      ## Graylog web service type.
       ##
-      suffix: ""
+      type: ClusterIP
+      ## Graylog web service port. If a "headless service" is needed, set ClusterIP as tipe and leave this value unset (empty)
+      ##
+      port: 9000
+
+      ## By default, a "graylog" port is created targeting the above port,
+      ## add additional ports for the service/statefulset to expose here, example:
+      ## ports: [
+      ##  name: tcpport
+      ##  port: 1234
+      ##  protocol: tcp
+      ## ]
+      ports: []
+      ## Allowed external IPs:
+      externalIPs:
+      ## Graylog web service annotations
+      ##
+      annotations: {}
+      headless:
+        ## Add suffix to headless service name
+        ##
+        suffix: ""
 
     master:
       ## Enable Graylog master service
       ##
       enabled: true
-      ## Graylog master service Ingress annotations
-      ##
-      annotations: {}
-      ## Graylog master service port.
-      ##
-      port: 9000
       ## Graylog master service type.
       ##
       type: ClusterIP
+      ## Graylog master service port.
+      ##
+      port: 9000
+      ## Graylog master service annotations
+      ##
+      annotations: {}
+
 
   startupProbe:
     periodSeconds: 60
@@ -477,7 +493,9 @@ graylog:
     ## Init Container image
     ##
     image:
+      registry: "docker.io"
       repository: "alpine"
+      tag: "latest"
       pullPolicy: "IfNotPresent"
 
     ## Set kubectl location to download and use on init-container. If the value is not set, the https://storage.googleapis.com/kubernetes-release/ will be used.
