--- a/charts/graylog/templates/web-service.yaml
+++ b/charts/graylog/templates/web-service.yaml
@@ -39,18 +39,18 @@ spec:
 {{- end }}
   type: {{ .Values.graylog.services.web.type }}
   {{- if eq "LoadBalancer" .Values.graylog.services.web.type }}
-  {{- if not (empty .Values.graylog.services.web.loadBalancerIP)) }}
+  {{- if not empty .Values.graylog.services.web.loadBalancerIP }}
   loadBalancerIP: {{ .Values.graylog.services.web.loadBalancerIP }}
   {{- end }}
-  {{- if not (empty .Values.graylog.services.web.loadBalancerClass)) }}
+  {{- if not empty .Values.graylog.services.web.loadBalancerClass }}
   loadBalancerClass: {{ .Values.graylog.services.web.loadBalancerClass }}
   {{- end }}
-  {{- if not (empty .Values.graylog.services.web.loadBalancerSourceRanges)) }}
+  {{- if not empty .Values.graylog.services.web.loadBalancerSourceRanges }}
   loadBalancerSourceRanges: {{ .Values.graylog.services.web.loadBalancerSourceRanges }}
   {{- end }}
   {{- end }}
   {{- if eq "ClusterIP" .Values.graylog.services.web.type }}
-  {{- if not (empty .Values.graylog.services.web.port)) }}
+  {{- if not empty .Values.graylog.services.web.port }}
   clusterIP: {{ .Values.graylog.services.web.port }}
   {{- else }}
   clusterIP: None
