--- a/charts/graylog/templates/web-service.yaml
+++ b/charts/graylog/templates/web-service.yaml
@@ -5,9 +5,6 @@ metadata:
   annotations:
 {{ toYaml .Values.graylog.services.web.annotations | indent 4 }}
 {{- end }}
-  {{- if and (eq .Values.graylog.services.web.type "ClusterIP") (empty .Values.graylog.services.web.port) }}
-  service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
-  {{- end }}
   name: {{ template "graylog.fullname" . }}-web
   labels:
 {{ include "graylog.metadataLabels" . | indent 4 }}
@@ -18,41 +15,35 @@ spec:
       port: {{ default 9000 .Values.graylog.services.web.port }}
       protocol: TCP
       targetPort: 9000
-      {{- if or (eq .Values.graylog.services.web.type "LoadBalancer") (eq .Values.graylog.services.web.type "NodePort") }}
+{{- if or (eq .Values.graylog.services.web.type "LoadBalancer") (eq .Values.graylog.services.web.type "NodePort") }}
       nodePort: {{ .Values.graylog.services.web.port }}
-      {{- else if eq .Values.graylog.services.web.type "ClusterIP" }}
+{{- else if eq .Values.graylog.services.web.type "ClusterIP" }}
       nodePort: null
-      {{- end }}
-      {{- range .Values.graylog.services.web.ports }}
+{{- end }}
+{{- range .Values.graylog.services.web.ports }}
     - name: {{ .name }}
       port: {{ .port }}
       protocol: {{ .protocol }}
       targetPort: {{ .port }}
-      {{- end }}
+{{- end }}
 
-  {{- if .Values.graylog.services.web.externalIPs }}
+{{- if .Values.graylog.services.web.externalIPs }}
   externalIPs:
-  {{ toYaml .Values.graylog.services.web.externalIPs | indent 4 }}
-  {{- end }}
+{{ toYaml .Values.graylog.services.web.externalIPs | indent 4 }}
+{{- end }}
   type: {{ .Values.graylog.services.web.type }}
-  {{- if eq "LoadBalancer" .Values.graylog.services.web.type }}
-  {{- if not .Values.graylog.services.web.loadBalancerIP }}
+{{- if eq "LoadBalancer" .Values.graylog.services.web.type }}
+{{- if .Values.graylog.services.web.loadBalancerIP }}
   loadBalancerIP: {{ .Values.graylog.services.web.loadBalancerIP }}
-  {{- end }}
-  {{- if not .Values.graylog.services.web.loadBalancerClass }}
+{{- end }}
+{{- if .Values.graylog.services.web.loadBalancerClass }}
   loadBalancerClass: {{ .Values.graylog.services.web.loadBalancerClass }}
-  {{- end }}
-  {{- if not .Values.graylog.services.web.loadBalancerSourceRanges }}
+{{- end }}
+{{- if .Values.graylog.services.web.loadBalancerSourceRanges }}
   loadBalancerSourceRanges: {{ .Values.graylog.services.web.loadBalancerSourceRanges }}
-  {{- end }}
-  {{- end }}
-  {{- if eq "ClusterIP" .Values.graylog.services.web.type }}
-  {{- if not .Values.graylog.services.web.port }}
-  clusterIP: None
-  publishNotReadyAddresses: true
-  {{- end }}
-  {{- end }}
+{{- end }}
+{{- end }}
 
-  {{- if and (or (eq .Values.graylog.services.web.type "NodePort") (eq .Values.graylog.services.web.type "LoadBalancer")) (not (empty .Values.graylog.services.web.externalTrafficPolicy)) }}
+{{- if and (or (eq .Values.graylog.services.web.type "NodePort") (eq .Values.graylog.services.web.type "LoadBalancer")) (not (empty .Values.graylog.services.web.externalTrafficPolicy)) }}
   externalTrafficPolicy: {{ .Values.graylog.services.web.externalTrafficPolicy | quote }}
-  {{- end }}
+{{- end }}
