--- a/charts/graylog/templates/headless-service.yaml
+++ b/charts/graylog/templates/headless-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "graylog.service.headless.name" . }}
+  name: {{ template "graylog.fullname" . }}-headless
   labels:
 {{ include "graylog.metadataLabels" . | indent 4 }}
   annotations:
